kubernetes/apps/ai/agentgateway/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway
spec:
  parentRefs:
    - name: external
      namespace: network
  hostnames:
    - "*.mcp.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: agentgateway-proxy
          port: 80
